--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,68 +1,92 @@
-$dark : rgb(24, 24, 24); 
+$dark : rgb(24, 24, 24);
 $darkmidle : rgb(31, 31, 31);
 $primary: #FF5858;
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-body{
+
+body {
     background-color: $darkmidle;
 }
 
-header{
+header {
 
-    .avisostext{
-        #avisoh3{font-size: 1em;}
+    .avisostext {
+        #avisoh3 {
+            font-size: 1em;
+        }
+
         background-color: #FF5858;
         text-align: center;
         color: #fff;
     }
- 
-    .menu{
+
+    .menu {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         font-family: 'Roboto', sans-serif;
         background-color: $dark;
-        .logo img{width: 100px;}
-        a{
+
+        .logo img {
+            width: 100px;
+        }
+
+        a {
             padding: 0 20px;
             text-decoration: none;
             color: #fff;
         }
-        a:hover{
+
+        a:hover {
             color: #FF5858;
         }
 
     }
 
 }
-.reco{
+
+.reco {
     padding-top: 200px;
     text-align: center;
     color: #fff;
-    .reconocida{
+
+    .reconocida {
         padding-top: 100px;
         display: flex;
-    gap: 50px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-family: "Roboto", Arial, Helvetica, sans-serif;
-    .ml{
-        padding-top: 80px;
-        padding-bottom: 80px ;
-        img{width: 200px;}
+        gap: 50px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        font-family: "Roboto", Arial, Helvetica, sans-serif;
+
+        .ml {
+            padding-top: 80px;
+            padding-bottom: 80px;
+
+            img {
+                width: 200px;
+            }
+        }
+
+        .rappi {
+            img {
+                width: 150px;
+            }
+        }
+
+        .aerolineas {
+            padding-top: 80px;
+
+            img {
+                margin-bottom: 50px;
+                width: 150px;
+            }
+        }
     }
-    .rappi{
-        img{width: 150px;}
-    }
-    .aerolineas{
-        padding-top: 80px;
-        img{width: 200px;}
-    }
-}
 
 }
-.certificado{
+
+.certificado {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -70,83 +94,281 @@ header{
     padding-top: 50px;
     color: #fff;
     font-family: 'Roboto', sans-serif;
-    img{width: 250px;}
 
-    .certext{
+    img {
+        width: 250px;
+    }
+
+    .certext {
         display: flex;
         justify-content: center;
         align-items: center;
         flex-direction: column;
-        background-image: url("../img/ux.png");
-        background-size: cover;
-        background-position: right;
         height: 300px;
+
+        i {
+            color: #FF3131;
+        }
     }
 }
 
-.destacados{
+.sobre-beca {
     background-color: $dark;
     margin: auto;
     width: 300px;
-    height: 1100px;
-    border-radius: 10px;
+    height: 500px;
+    border-radius: 5px;
+    padding: 30px;
     margin-top: 100px;
     text-align: center;
-    color: #fff;
+    color: $primary;
     font-family: "Roboto", Arial, Helvetica, sans-serif;
-    .destacados-container{
+
+    .beca {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         gap: 30px;
-        .d-items{
-            margin-top: 50px;
-            h3{color: $dark;}            
-            background-color: #FF3131;
-            width: 250px;
-            height: 250px;
-            color: #fff;
+        color: #fff;
+
+        button {
+            background: none;
+            border: 2px solid #fff;
             border-radius: 5px;
-            box-shadow: 5px 5px $dark;
+            color: #FF3131;
+
+        }
+
+        button:hover {
+            background-color: #fff;
+            color: #FF3131;
+            font-weight: 700;
         }
     }
 }
 
+//------------------SECCION CURSOS------------------------------------
+.secciones {
+    margin: 50px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    flex-direction: column;
 
-@media screen and (min-width: 768px){
-    header{
-        .avisostext{
-            #avisoh3{font-size: 1.5em;}
+    button {
+        width: 160px;
+        background: none;
+        border: 2px solid #fff;
+        border-radius: 5px;
+        color: #FF3131;
+    }
+
+    button:hover {
+        background-color: #fff;
+        color: #FF3131;
+        font-weight: 700;
+    }
+}
+
+.js-secciones-cursos {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    gap: 30px;
+
+    a {
+        text-decoration: none;
+    }
+
+    .js-seccion-design {
+        margin: auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        width: 300px;
+        height: 200px;
+        background-color: rgb(245, 245, 245, .1);
+        text-align: center;
+        border: 2px solid $primary;
+        cursor: pointer;
+
+        h2 {
+            color: #fff;
         }
 
-        .menu{
-            font-size: 1.3em;
+        p {
+            color: #fff;
+        }
 
-            .logo img{width: 110px;}
+        img {
+            width: 100px;
         }
     }
-    .certificado{
-        img{width: 400px;}
+
+
+    .js-seccion-design:hover {
+        border: none;
+    }
+}
+
+//-------------------python------------------------------------------
+.python {
+    font-family: 'Roboto', sans-serif;
+    padding-top: 100px;
+    display: flex;
+    justify-content: space-around;
+    gap: 50px;
+    flex-wrap: wrap;
+
+    .py1 {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        h2 {
+            color: #fff;
+            font-size: 2.5em;
+        }
+
+        h3 {
+            color: #fff;
+        }
+
+        img {
+            width: 150px;
+        }
+
+        button {
+            background: none;
+            border: 2px solid #fff;
+            border-radius: 5px;
+            color: #FF3131;
+        }
+
+        button:hover {
+            background-color: #fff;
+            color: #FF3131;
+            font-weight: 700;
+        }
+    }
+
+    .py2 {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+
+        i {
+            color: #FF3131;
+        }
+
+        h3 {
+            color: #fff;
+        }
+
+        .py-price {
+            background-color: #FF5858;
+            border-radius: 5px;
+            display: flex;
+            justify-content: space-around;
+
+            p {
+                color: #1F1F1F;
+                font-size: 1.5em;
+                font-weight: 600;
+                margin: auto;
+            }
+
+            button {
+                background: none;
+                border: 2px solid #fff;
+                border-radius: 5px;
+                color: #FF3131;
+                background-color: #1F1F1F;
+                margin: auto;
+                text-align: center;
+                height: 30px;
+                width: 40px;
+
+                
+                
+                i {
+                    color: #FF3131;
+                }
+            }
+            button:hover{
+                background-color: #fff;
+                color: #FF3131;
+            }
+
+        }
+    }
+}
+
+//-------------------FOOOTER------------------------------------
+footer {
+    color: #fff;
+    font-family: "Roboto", Arial, Helvetica, sans-serif;
+}
+
+//--------------------------------------------------------------
+@media screen and (min-width: 768px) {
+    header {
+        .avisostext {
+            #avisoh3 {
+                font-size: 1.5em;
+            }
+        }
+
+        .menu {
+            font-size: 1.3em;
+
+            .logo img {
+                width: 110px;
+            }
+        }
+    }
+
+    .certificado {
+        img {
+            width: 400px;
+        }
+
         flex-direction: row;
         justify-content: space-evenly;
     }
-    .reco{
-        .reconocida{
+
+    .reco {
+        .reconocida {
             display: grid;
             grid-template-columns: 1fr 1fr 1fr;
         }
     }
 
-    .destacados{
-        width: 800px;
-        height: 400px;
-        .destacados-container{
-            flex-direction: row;
+    .sobre-beca {
+        width: 900px;
+        height: 300px;
+
+        .beca {
+            // flex-direction: row;
         }
     }
-    
 
-    
-    
+    //------Seccion CURSOS-------
+    .secciones {
+        flex-direction: row;
+    }
+
+    .js-secciones-cursos {
+        flex-direction: row;
+    }
+
+    //---------------------------
+
+
+
 }
