--- a/css/style.css
+++ b/css/style.css
@@ -131,6 +131,7 @@ header .menu a:hover {
   background: none;
   border: 2px solid #fff;
   border-radius: 5px;
+  padding: 10px 0;
   color: #FF3131;
 }
 .secciones button:hover {
@@ -140,6 +141,7 @@ header .menu a:hover {
 }
 
 .js-secciones-cursos {
+  margin-bottom: 50px;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
