--- a/scss/style.scss
+++ b/scss/style.scss
@@ -162,6 +162,7 @@ header {
         background: none;
         border: 2px solid #fff;
         border-radius: 5px;
+        padding: 10px 0;
         color: #FF3131;
     }
 
@@ -173,6 +174,7 @@ header {
 }
 
 .js-secciones-cursos {
+    margin-bottom: 50px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
