--- a/css/style.css
+++ b/css/style.css
@@ -144,7 +144,7 @@ header .menu a:hover {
   margin-bottom: 50px;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-evenly;
   gap: 30px;
 }
 .js-secciones-cursos a {
@@ -158,7 +158,7 @@ header .menu a:hover {
   align-items: center;
   gap: 10px;
   width: 300px;
-  height: 200px;
+  height: 240px;
   background-color: rgba(245, 245, 245, 0.1);
   text-align: center;
   border: 2px solid #FF5858;
@@ -202,6 +202,7 @@ header .menu a:hover {
   width: 150px;
 }
 .python .py1 button {
+  margin-top: 20px;
   background: none;
   border: 2px solid #fff;
   border-radius: 5px;
@@ -250,6 +251,84 @@ header .menu a:hover {
   color: #FF3131;
 }
 .python .py2 .py-price button:hover {
+  background-color: #fff;
+  color: #FF3131;
+}
+
+.javascript {
+  font-family: "Roboto", sans-serif;
+  padding-top: 100px;
+  display: flex;
+  justify-content: space-around;
+  gap: 50px;
+  flex-wrap: wrap;
+}
+.javascript .js1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.javascript .js1 h2 {
+  color: #fff;
+  font-size: 2.5em;
+}
+.javascript .js1 h3 {
+  color: #fff;
+}
+.javascript .js1 img {
+  width: 150px;
+}
+.javascript .js1 button {
+  margin-top: 20px;
+  background: none;
+  border: 2px solid #fff;
+  border-radius: 5px;
+  color: #FF3131;
+}
+.javascript .js1 button:hover {
+  background-color: #fff;
+  color: #FF3131;
+  font-weight: 700;
+}
+.javascript .js2 {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.javascript .js2 i {
+  color: #FF3131;
+}
+.javascript .js2 h3 {
+  color: #fff;
+}
+.javascript .js2 .js-price {
+  background-color: #FF5858;
+  border-radius: 5px;
+  display: flex;
+  justify-content: space-around;
+}
+.javascript .js2 .js-price p {
+  color: #1F1F1F;
+  font-size: 1.5em;
+  font-weight: 600;
+  margin: auto;
+}
+.javascript .js2 .js-price button {
+  background: none;
+  border: 2px solid #fff;
+  border-radius: 5px;
+  color: #FF3131;
+  background-color: #1F1F1F;
+  margin: auto;
+  text-align: center;
+  height: 30px;
+  width: 40px;
+}
+.javascript .js2 .js-price button i {
+  color: #FF3131;
+}
+.javascript .js2 .js-price button:hover {
   background-color: #fff;
   color: #FF3131;
 }
