--- a/scss/style.scss
+++ b/scss/style.scss
@@ -177,7 +177,7 @@ header {
     margin-bottom: 50px;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-evenly;
     gap: 30px;
 
     a {
@@ -192,7 +192,7 @@ header {
         align-items: center;
         gap: 10px;
         width: 300px;
-        height: 200px;
+        height: 240px;
         background-color: rgb(245, 245, 245, .1);
         text-align: center;
         border: 2px solid $primary;
@@ -246,6 +246,7 @@ header {
         }
 
         button {
+            margin-top: 20px;
             background: none;
             border: 2px solid #fff;
             border-radius: 5px;
@@ -273,6 +274,102 @@ header {
         }
 
         .py-price {
+            background-color: #FF5858;
+            border-radius: 5px;
+            display: flex;
+            justify-content: space-around;
+
+            p {
+                color: #1F1F1F;
+                font-size: 1.5em;
+                font-weight: 600;
+                margin: auto;
+            }
+
+            button {
+                background: none;
+                border: 2px solid #fff;
+                border-radius: 5px;
+                color: #FF3131;
+                background-color: #1F1F1F;
+                margin: auto;
+                text-align: center;
+                height: 30px;
+                width: 40px;
+
+
+
+                i {
+                    color: #FF3131;
+                }
+            }
+
+            button:hover {
+                background-color: #fff;
+                color: #FF3131;
+            }
+
+        }
+    }
+}
+
+//-------------------JAVASCRIPT---------------------------------
+.javascript {
+    font-family: 'Roboto', sans-serif;
+    padding-top: 100px;
+    display: flex;
+    justify-content: space-around;
+    gap: 50px;
+    flex-wrap: wrap;
+
+    .js1 {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        h2 {
+            color: #fff;
+            font-size: 2.5em;
+        }
+
+        h3 {
+            color: #fff;
+        }
+
+        img {
+            width: 150px;
+        }
+
+        button {
+            margin-top: 20px;
+            background: none;
+            border: 2px solid #fff;
+            border-radius: 5px;
+            color: #FF3131;
+        }
+
+        button:hover {
+            background-color: #fff;
+            color: #FF3131;
+            font-weight: 700;
+        }
+    }
+
+    .js2 {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+
+        i {
+            color: #FF3131;
+        }
+
+        h3 {
+            color: #fff;
+        }
+
+        .js-price {
             background-color: #FF5858;
             border-radius: 5px;
             display: flex;
