--- a/css/style.css
+++ b/css/style.css
@@ -264,6 +264,7 @@ header .menu a:hover {
   flex-wrap: wrap;
 }
 .javascript .js1 {
+  text-align: center;
   display: flex;
   flex-direction: column;
   justify-content: center;
