--- a/css/style.css
+++ b/css/style.css
@@ -332,6 +332,7 @@ header .menu a:hover {
 .javascript .js2 .js-price button:hover {
   background-color: #fff;
   color: #FF3131;
+  font-weight: 700;
 }
 
 .whatsapp {
@@ -378,6 +379,51 @@ footer .foorow h3 {
 }
 footer .foorow p {
   font-size: 0.7em;
+}
+
+.login {
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
+  display: flex;
+  justify-content: center;
+  color: #FF3131;
+  flex-direction: column;
+  gap: 30px;
+  align-items: center;
+  margin: auto;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  background-color: rgb(24, 24, 24);
+  width: 300px;
+  height: 350px;
+}
+.login .logg {
+  color: #fff;
+  text-align: center;
+  display: flex;
+  gap: 20px;
+  flex-direction: column;
+}
+.login .logg p {
+  cursor: pointer;
+}
+.login .logg input {
+  width: 200px;
+}
+.login .logg button {
+  background: none;
+  border: 2px solid #fff;
+  border-radius: 5px;
+  color: #FF3131;
+  background-color: #1F1F1F;
+  margin: auto;
+  text-align: center;
+  height: 30px;
+  width: 100px;
+}
+.login .logg button:hover {
+  background-color: #fff;
+  color: #FF3131;
+  font-weight: 700;
 }
 
 @media screen and (min-width: 768px) {
