--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,14 @@
 $dark : rgb(24, 24, 24);
 $darkmidle : rgb(31, 31, 31);
 $primary: #FF5858;
+
+@mixin flex ($justify, $align, $direction) {
+    display: flex;
+    justify-content: $justify;
+    align-items: $align;
+    flex-direction: $direction;
+}
+
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 body {
@@ -20,10 +28,7 @@ header {
     }
 
     .menu {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+        @include flex(center, center, column);
         font-family: 'Roboto', sans-serif;
         background-color: $dark;
 
@@ -52,11 +57,8 @@ header {
 
     .reconocida {
         padding-top: 100px;
-        display: flex;
+        @include flex(center, center, column);
         gap: 50px;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
         font-family: "Roboto", Arial, Helvetica, sans-serif;
 
         .ml {
@@ -87,10 +89,7 @@ header {
 }
 
 .certificado {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    @include flex(center, center, column);
     padding-top: 50px;
     color: #fff;
     font-family: 'Roboto', sans-serif;
@@ -100,10 +99,7 @@ header {
     }
 
     .certext {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
+        @include flex(center, center, column);
         height: 300px;
 
         i {
@@ -125,10 +121,7 @@ header {
     font-family: "Roboto", Arial, Helvetica, sans-serif;
 
     .beca {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+        @include flex(center, center, column);
         gap: 30px;
         color: #fff;
 
@@ -151,11 +144,8 @@ header {
 //------------------SECCION CURSOS------------------------------------
 .secciones {
     margin: 50px 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include flex(center, center, column);
     gap: 10px;
-    flex-direction: column;
 
     button {
         width: 160px;
@@ -175,9 +165,7 @@ header {
 
 .js-secciones-cursos {
     margin-bottom: 50px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
+    @include flex(space-evenly, center, column);
     gap: 30px;
 
     a {
@@ -186,10 +174,7 @@ header {
 
     .js-seccion-design {
         margin: auto;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+        @include flex(center, center, column);
         gap: 10px;
         width: 300px;
         height: 240px;
@@ -221,16 +206,12 @@ header {
 .python {
     font-family: 'Roboto', sans-serif;
     padding-top: 100px;
-    display: flex;
-    justify-content: space-around;
-    gap: 50px;
+    @include flex(space-around, center, column);
     flex-wrap: wrap;
+    gap: 50px;
 
     .py1 {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+        @include flex(center, center, column);
 
         h2 {
             color: #fff;
@@ -317,17 +298,13 @@ header {
 .javascript {
     font-family: 'Roboto', sans-serif;
     padding-top: 100px;
-    display: flex;
-    justify-content: space-around;
+    @include flex(space-around, center, column);
     gap: 50px;
     flex-wrap: wrap;
-    
+
     .js1 {
         text-align: center;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+        @include flex(center, center, column);
 
         h2 {
             color: #fff;
@@ -410,25 +387,34 @@ header {
         }
     }
 }
+
 //-------------------WHATSAPP-----------------------------------
 
-.whatsapp{
+.whatsapp {
     position: fixed;
     bottom: 30px;
     right: 30px;
-    img{width: 50px;}
+
+    img {
+        width: 50px;
+    }
 }
 
 //-------------------FOOOTER------------------------------------
 footer {
     background-color: $dark;
+
     .fooflex {
         text-align: center;
-        display: flex;
-        justify-content: space-around;
+        @include flex(space-around, center, column);
         color: #fff;
         font-family: "Roboto", Arial, Helvetica, sans-serif;
-        i{color: #FF3131; padding: 5px;}
+
+        i {
+            color: #FF3131;
+            padding: 5px;
+        }
+
         .redes {
             h3 {
                 font-size: .9em;
@@ -456,7 +442,8 @@ footer {
         h3 {
             font-size: 0.9em;
         }
-        p{
+
+        p {
             font-size: 0.7em;
         }
     }
@@ -464,53 +451,53 @@ footer {
 }
 
 //-------------------LOGIN--------------------------------------
-.login{
+.login {
     font-family: "Roboto", Arial, Helvetica, sans-serif;
-    display: flex;
-    justify-content: center;
+    @include flex(center, center, column);
     color: #FF3131;
-    flex-direction: column;
     gap: 30px;
-    align-items: center;
     margin: auto;
     margin-top: 100px;
     margin-bottom: 100px;
     background-color: rgb(24, 24, 24);
     width: 300px;
     height: 350px;
-    .logg{
+
+    .logg {
         color: #fff;
         text-align: center;
         display: flex;
         gap: 20px;
         flex-direction: column;
 
-        p{
+        p {
             cursor: pointer;
         }
 
-        input{
+        input {
             width: 200px;
         }
-        
-        button{
+
+        button {
             background: none;
-                border: 2px solid #fff;
-                border-radius: 5px;
-                color: #FF3131;
-                background-color: #1F1F1F;
-                margin: auto;
-                text-align: center;
-                height: 30px;
-                width: 100px;
+            border: 2px solid #fff;
+            border-radius: 5px;
+            color: #FF3131;
+            background-color: #1F1F1F;
+            margin: auto;
+            text-align: center;
+            height: 30px;
+            width: 100px;
         }
-        button:hover{
+
+        button:hover {
             background-color: #fff;
-                color: #FF3131;
-                font-weight: 700;
+            color: #FF3131;
+            font-weight: 700;
         }
     }
 }
+
 
 //--------------------------------------------------------------
 @media screen and (min-width: 768px) {
@@ -563,31 +550,33 @@ footer {
     //--------FOOTER--------------
     footer {
         margin-top: 100px;
+
         .fooflex {
             flex-direction: row;
-    
+
             .redes {
                 h3 {
                     font-size: 1.4em;
                 }
             }
-    
+
             .ubication {
                 h3 {
                     font-size: 1.4em;
                 }
-    
+
                 p {
                     font-size: 1em;
                 }
             }
         }
 
-        .foorow{
-            h3{
+        .foorow {
+            h3 {
                 font-size: 1.4em;
             }
-            p{
+
+            p {
                 font-size: 1em;
             }
         }
