--- a/scss/style.scss
+++ b/scss/style.scss
@@ -499,6 +499,40 @@ footer {
 }
 
 
+//------------------------CONTACTO------------------------------
+.contacto{
+    @include flex(center,center ,column );
+    padding-top: 50px;
+    color: #fff;
+    form{
+        margin-top: 30px;
+        display: flex;
+        flex-direction: column;
+        font-family: Roboto, Arial;
+        input{
+            width: 200px;
+        }
+        textarea{
+            width: 200px;
+            height: 100px;
+        }
+        button{
+            margin-top: 10px; 
+            width: 200px;
+            background: none;
+            border: 2px solid #fff;
+            border-radius: 5px;
+            color: #FF3131;
+            background-color: #1F1F1F;
+            text-align: center;
+        }
+        button:hover{
+            background-color: #fff;
+                color: #FF3131;
+                font-weight: 700;
+        }
+    }
+}
 //--------------------------------------------------------------
 @media screen and (min-width: 768px) {
     header {
